<resources>
    <string name="app_name">Brnmb Active Android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agility_heros">Agility Heros</string>
    <string name="intelligence_heros">Intelligence Heros</string>
    <string name="strength_heros">Strength Heros</string>
    <string name="agility">Agility</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="home">Home</string>
    <string name="image_description">Dota 2 logo</string>
    <string name="dota_heros">Dota Heros</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="attribute">Attribute</string>
    <string name="role_mid_lane">Mid Lane</string>
    <string name="role_off_lane">Mid Lane</string>
    <string name="role_safe_lane">Mid Lane</string>
</resources>
