<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_agility"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/agility"/>
        <item
                android:id="@+id/nav_strength"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/strength"/>
        <item
                android:id="@+id/nav_intelligence"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/intelligence"/>
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/home"/>
    </group>

    <item android:title="Communicate"
          android:enabled="false">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:enabled="false"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:enabled="false"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
