<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="org.github.brnmb.android.active.view.HeroProfile">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"
                android:id="@+id/name_title"
                android:layout_above="@+id/attribute" android:layout_toEndOf="@+id/profile_image"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/name"
                android:layout_marginStart="10dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/name_title"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/attribute"
                android:id="@+id/Attribute_title"
                android:layout_below="@+id/name_title" android:layout_toEndOf="@+id/profile_image"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:layout_marginStart="10dp"
                android:id="@+id/attribute"
                android:layout_below="@+id/name"
                android:layout_toEndOf="@+id/Attribute_title"/>
        <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/profile_image"
                android:contentDescription="@string/image_description"/>

</RelativeLayout>
